<resources>
    <string name="app_name">Employee Management</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="user_type">User Type</string>
    <string name="dont_have_account_register">Don\'t have account? Register</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="employee_list">Employee List</string>
    <string name="no_employees_found">No employees found</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_name">Employee Name</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="phone">Phone</string>
    <string name="salary">Salary</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_employee_confirmation">Are you sure you want to delete this employee?</string>
    <string name="hr_manager">HR Manager</string>
    <string name="ceo">CEO</string>

    <string-array name="roles_array">
        <item>Select Role</item>
        <item>HR Manager</item>
        <item>Manager</item>
        <item>CEO</item>
    </string-array>

</resources>